homework/5.kubernetes-network/deployment-redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-redmine
spec:
  replicas: 2
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 60
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 60
          initialDelaySeconds: 10
