homework/5.kubernetes-network/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database-svc
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgresql
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-svc
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
